--- a/web-intensive/lesson1/chat.html
+++ b/web-intensive/lesson1/chat.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
        <div class="column1">
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_lKnuQT.json"  background="transparent"  speed="1"  style="width: 100px; height: 100px;"  loop  autoplay></lottie-player>
         <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_s0cpca0v.json"  background="transparent"  speed="1"  style="width: 120px; height: 120px;"  loop  autoplay></lottie-player>
        </div> 
 
@@ -144,30 +145,50 @@
        </div>
        <div class="column3"> 
         <div class="title d-flex justify-content-between">
-            <h2 class="">Nguyễn Đức Ben</h2>
-           <span class="d-flex align-items-center mx-5 bold">18:00</span>
+            <h2 class="">Leo</h2>
+           <span class="d-flex align-items-center mx-5 bold">16:00</span>
         </div>
             <div class="chatbox">
-                <div class="chat-content-container">
-                    <span>HELLO !</span>
-                </div>
-                <div class="chat-content">
-                    <span>I want to say something thing. </span>
-                </div>
-                <div class="chat-content">
-                    <span>ULTIMATE CHOCOLATE SUNDAY !!</span>
-                </div>
-                <div class="chat-content owner">
-                    <span>:)</span>
-                </div>
-                <div class="chat-content">
-                    <span>Why are you smilling ?</span>
-                </div>
-                <div class="chat-content owner">
-                    <span>Because I am going to eat YOU !!!</span>
-                </div>
-                <div class="chat-content">
-                    <span>NANI !!!!</span>
+                <div class="chat">
+                    <div class="chat-content-container">
+                        <div class="chat-content">
+                            <span>HELLO !</span>
+                        </div>
+                        <div class="chat-content owner">
+                            <span>What?</span>
+                        </div>
+                        <div class="chat-content">
+                            <span>I want to say something thing. </span>
+                        </div>
+                        <div class="chat-content owner">
+                            <span>?</span>
+                        </div>
+                        <div class="chat-content">
+                            <span>ULTIMATE CHOCOLATE SUNDAY !!</span>
+                        </div>
+                        <div class="chat-content owner">
+                            <span>ok</span>
+                        </div>
+                        <div class="chat-content">
+                            <span>That's all, an ok. Ugh u are so boring man.</span>
+                        </div>
+                        <div class="chat-content owner">
+                            <span>:)</span>
+                        </div>
+                        <div class="chat-content">
+                            <span>UH why are you smilling ?</span>
+                        </div>
+                        <div class="chat-content owner">
+                            <span>Because I am going to eat YOU !!!</span>
+                        </div>
+                        <div class="chat-content">
+                            <span>NANI !!!!</span>
+                        </div>
+                        <form action="">
+                            <input type="text" placeholder="Enter your message">
+                            <button type="submit"><lottie-player src="https://assets8.lottiefiles.com/packages/lf20_kzb2lxrr.json"  background="transparent"  speed="1"  style="width: 50px; height: 50px;"  loop  autoplay></lottie-player></button>
+                        </form>
+                    </div> 
                 </div>
             </div>
        </div>
