--- a/web-intensive/lesson1/chat.html
+++ b/web-intensive/lesson1/chat.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
        <div class="column1">
-        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_lKnuQT.json"  background="transparent"  speed="1"  style="width: 100px; height: 100px;"  loop  autoplay></lottie-player>
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_lKnuQT.json"  background="transparent"  speed="1"  style="width: 15w0px; height: 150px;"  loop  autoplay></lottie-player>
         <lottie-player src="https://assets8.lottiefiles.com/packages/lf20_s0cpca0v.json"  background="transparent"  speed="1"  style="width: 120px; height: 120px;"  loop  autoplay></lottie-player>
        </div> 
 
