--- a/web-intensive/lesson1/chat.html
+++ b/web-intensive/lesson1/chat.html
@@ -7,6 +7,7 @@
     <title>Chatting</title>
     <link rel="stylesheet" href="./styleChat.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -184,11 +185,11 @@
                         <div class="chat-content">
                             <span>NANI !!!!</span>
                         </div>
-                        <form action="">
-                            <input type="text" placeholder="Enter your message">
-                            <button type="submit"><lottie-player src="https://assets8.lottiefiles.com/packages/lf20_kzb2lxrr.json"  background="transparent"  speed="1"  style="width: 50px; height: 50px;"  loop  autoplay></lottie-player></button>
-                        </form>
                     </div> 
+                    <form action="">
+                        <input type="text" placeholder="Enter your message">
+                        <button type="submit"><lottie-player src="https://assets8.lottiefiles.com/packages/lf20_kzb2lxrr.json"  background="transparent"  speed="1"  style="width: 50px; height: 50px;"  loop  autoplay></lottie-player></button>
+                    </form>
                 </div>
             </div>
        </div>
