--- a/web-intensive/lesson1/chat.html
+++ b/web-intensive/lesson1/chat.html
@@ -45,7 +45,7 @@
       </div>
       <div class="users_chat_container">
         <div class="title">
-          <h2 class="text-center">Chat BanaDuong</h2>
+          <h2 class="text-center">Chat</h2>
         </div>
 
         <div class="list-group list-group-flush border-bottom scrollarea">
