--- a/web-intensive/lesson1/chat.html
+++ b/web-intensive/lesson1/chat.html
@@ -39,7 +39,7 @@
             </label>
           </div>
         </div>
-        <lottie-player
+        <lottie-player onclick="signOut()"
         src="https://assets6.lottiefiles.com/packages/lf20_0fwl68.json"  background="transparent"  speed="1"  style="width: 120px; height: 120px;"  loop  autoplay
         ></lottie-player>
       </div>
@@ -287,6 +287,34 @@
         </div>
       </div>
     </div>
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+    
+        <script>
+            // Your web app's Firebase configuration
+            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+            var firebaseConfig = {
+                apiKey: "AIzaSyAoRC9qYHB4Z4rhbLjgo7Jl-c6O2WaMGSM",
+                authDomain: "duongnoob-b80d7.firebaseapp.com",
+                projectId: "duongnoob-b80d7",
+                storageBucket: "duongnoob-b80d7.appspot.com",
+                messagingSenderId: "319308290719",
+                appId: "1:319308290719:web:692dec01e82e09235720aa",
+                measurementId: "G-QG8SPSCWBS"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+        </script>
+
+        <script src="./scriptChat.js"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script
