--- a/web-intensive/lesson1/chat.html
+++ b/web-intensive/lesson1/chat.html
@@ -1,86 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat</title>
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./chat.css" />
-    <link
-      href="https://pro.fontawesome.com/releases/v5.12.0/css/all.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <div class="info_chat_container">
-        <lottie-player
-          src="https://assets3.lottiefiles.com/packages/lf20_lKnuQT.json"
-          background="transparent"
-          speed="1"
-          style="width: 100px; height: 100px"
-          loop
-          autoplay
-        ></lottie-player>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./chat.css" />
+  <link href="https://pro.fontawesome.com/releases/v5.12.0/css/all.css" rel="stylesheet" />
+  <link rel="shortcut icon" href="./img/25540.jpg" type="image/x-icon">
+</head>
+
+<body>
+  <div class="container">
+    <div class="info_chat_container">
+      <lottie-player data-bs-toggle="modal" data-bs-target="#staticBackdrop" src="https://assets3.lottiefiles.com/packages/lf20_lKnuQT.json" background="transparent" speed="1"
+        style="width: 100px; height: 100px" loop autoplay></lottie-player>
+      <div>
         <div>
-          <div>
-            <input type="checkbox" class="checkbox" id="chk" />
-            <label class="label" for="chk">
-              <i class="fas fa-moon"></i>
-              <i class="fas fa-sun"></i>
-              <div class="ball"></div>
-            </label>
-          </div>
-        </div>
-        <lottie-player onclick="signOut()" src="https://assets7.lottiefiles.com/packages/lf20_0fwl68.json"  background="transparent"  speed="1"  style="width: 120px; height: 120px;"  loop  autoplay></lottie-player>
-      </div>
-      <div class="users_chat_container">
-        <div class="title">
-          <h2 class="text-center">Chat BanaDuong</h2>
-        </div>
-
-        <div id="list_friends" class="list-group list-group-flush border-bottom scrollarea">
-
-
+          <input type="checkbox" class="checkbox" id="chk" />
+          <label class="label" for="chk">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball"></div>
+          </label>
         </div>
       </div>
-      <div class="body_chat_container">
-        <div class="title d-flex justify-content-between">
-          <div>
-            <h2 id="chat_name" class="">...</h2>
-            <p id="currentEmail" style="align-self: center;">ádjfhasjhfafjfhf</p>
+      <lottie-player onclick="signOut()" src="https://assets7.lottiefiles.com/packages/lf20_0fwl68.json"
+        background="transparent" speed="1" style="width: 120px; height: 120px;" loop autoplay></lottie-player>
+    </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+      aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <p id="currentID" style="align-self: center; width: 20px; overflow: hidden;">...</p>
-          <span id="chat_clock" class="d-flex align-items-center mx-5"></span>
-        </div>
-        <div class="chat">
-          <div class="chat-content-container">
+          <div class="modal-body">
+            <form id="fAddConversation">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Friend Email address</label>
+                <input type="email" name="fEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted">Please enter your friend email address</small>
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1">Friend Name</label>
+                <input name="fName" type="text" class="form-control" id="exampleInputPassword1" placeholder="Enter Friend Name">
+              </div>
+
+              <button type="submit" class="btn btn-success mt-5">Add</button>
+            </form>
           </div>
-          <form id="sent_message">
-            <input name="m" type="text" placeholder="Enter your message" />
-            <button type="submit">
-              <lottie-player
-                src="https://assets2.lottiefiles.com/packages/lf20_kzb2lxrr.json"
-                background="transparent"
-                speed="1"
-                style="width: 50px; height: 50px"
-                loop
-                autoplay
-              ></lottie-player>
-            </button>
-          </form>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
         </div>
       </div>
     </div>
+    <div class="users_chat_container">
+      <div class="title">
+        <h2 class="text-center">Chat BanaDuong</h2>
+      </div>
 
-      <!-- The core Firebase JS SDK is always required and must be listed first -->
+      <div id="list_friends" class="list-group list-group-flush border-bottom scrollarea">
+
+
+      </div>
+    </div>
+    <div class="body_chat_container">
+      <div class="title d-flex justify-content-between">
+        <div>
+          <h2 id="chat_name" class="">...</h2>
+          <p id="currentID" style="align-self: center; width: 20px; ">...</p>
+          <p id="currentEmail" style="align-self: center;">ádjfhasjhfafjfhf</p>
+        </div>
+        <span id="chat_clock" class="d-flex align-items-center mx-5"></span>
+      </div>
+      <div class="chat">
+        <div class="chat-content-container">
+        </div>
+        <form id="sent_message">
+          <input name="m" type="text" placeholder="Enter your message" />
+          <button type="submit">
+            <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_kzb2lxrr.json" background="transparent"
+              speed="1" style="width: 50px; height: 50px" loop autoplay></lottie-player>
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
@@ -108,23 +125,22 @@
 
 
 
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <script src="./chat.js"></script>
-      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script src="./chat.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-    <script>
-        const chk = document.getElementById('chk');
+  <script>
+    const chk = document.getElementById('chk');
 
-chk.addEventListener('change', () => {
-	document.body.classList.toggle('dark');
-});
-    </script>
+    chk.addEventListener('change', () => {
+      document.body.classList.toggle('dark');
+    });
+  </script>
 
-  </body>
+</body>
+
 </html>
